fixing spacing

--- a/styles.css
+++ b/styles.css
@@ -70,7 +70,7 @@ main ol, ul, li {
     line-height: 22px; /* 150% */ 
     padding-left: 5vw;
     color:#4c082c;
-    margin-bottom: 2vw;
+   
 }
 
 
